friendship test with friend request scenario (#37)